--- a/group_flask_starter/starter_app/Pipfile
+++ b/group_flask_starter/starter_app/Pipfile
@@ -22,6 +22,7 @@ werkzeug = "==1.0.1"
 wtforms = "==2.3.3"
 psycopg2-binary = "==2.8.6"
 flask-jwt-extended = "==3.24.1"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.8"
