logout route working

--- a/group_flask_starter/starter_app/Pipfile
+++ b/group_flask_starter/starter_app/Pipfile
@@ -23,6 +23,7 @@ wtforms = "==2.3.3"
 psycopg2-binary = "==2.8.6"
 flask-jwt-extended = "==3.24.1"
 flask-migrate = "*"
+flask-login = "*"
 
 [requires]
 python_version = "3.8"
