--- a/group_flask_starter/starter_app/Pipfile
+++ b/group_flask_starter/starter_app/Pipfile
@@ -24,6 +24,7 @@ psycopg2-binary = "==2.8.6"
 flask-jwt-extended = "==3.24.1"
 flask-migrate = "*"
 flask-login = "*"
+bcrypt = "*"
 
 [requires]
 python_version = "3.8"
