--- a/group_flask_starter/starter_app/Pipfile
+++ b/group_flask_starter/starter_app/Pipfile
@@ -25,6 +25,7 @@ flask-jwt-extended = "==3.24.1"
 flask-migrate = "*"
 flask-login = "*"
 bcrypt = "*"
+datetime = "*"
 
 [requires]
 python_version = "3.8"
