--- a/group_flask_starter/starter_app/requirements.txt
+++ b/group_flask_starter/starter_app/requirements.txt
@@ -1,16 +1,29 @@
+alembic==1.4.3
+bcrypt==3.2.0
+cffi==1.14.3
 click==7.1.2
+DateTime==4.3
 Flask==1.1.2
 Flask-Cors==3.0.8
+Flask-JWT-Extended==3.24.1
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Mako==1.1.3
 MarkupSafe==1.1.1
+psycopg2-binary==2.8.6
+pycparser==2.20
+PyJWT==1.7.1
+python-dateutil==2.8.1
 python-dotenv==0.14.0
+python-editor==1.0.4
+pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.19
 Werkzeug==1.0.1
 WTForms==2.3.3
-psycopg2-binary==2.8.6
-flask-jwt-extended==3.24.1
+zope.interface==5.1.0
