removed 's' from proxy https, added password type back. added link to switch to signup from log in. fixed tables by removing alembic_version from table, then used flask db stamp heads, then proceeded with upgrade and python database.py. All working again

--- a/group_flask_starter/client/package.json
+++ b/group_flask_starter/client/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://localhost:5000",
+  "proxy": "http://localhost:5000",
   "redux": {
     "version": "4.0.5",
     "resolved": "https://registry.npmjs.org/redux/-/redux-4.0.5.tgz",
