--- a/group_flask_starter/starter_app/Pipfile
+++ b/group_flask_starter/starter_app/Pipfile
@@ -22,10 +22,19 @@ werkzeug = "==1.0.1"
 wtforms = "==2.3.3"
 psycopg2-binary = "==2.8.6"
 flask-jwt-extended = "==3.24.1"
-flask-migrate = "*"
-flask-login = "*"
-bcrypt = "*"
-datetime = "*"
+flask-migrate = "==2.5.3"
+flask-login = "==0.5.0"
+bcrypt = "==3.2.0"
+datetime = "==4.3"
+alembic = "==1.4.3"
+cffi = "==1.14.3"
+mako = "==1.1.3"
+pycparser = "==2.20"
+pyjwt = "==1.7.1"
+python-dateutil = "==2.8.1"
+python-editor = "==1.0.4"
+pytz = "==2020.1"
+"zope.interface" = "==5.1.0"
 
 [requires]
 python_version = "3.8"
