--- a/snackOverflow/client/package.json
+++ b/snackOverflow/client/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "rm -rf ../starter_app/app/static && mv build ../starter_app/app/static",
+    "postbuild": "rm -rf ../backEnd/app/static && mv build ../backEnd/app/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
